[gd_scene load_steps=6 format=3 uid="uid://ch5lktd71coqj"]

[ext_resource type="PackedScene" uid="uid://cb1qm6o40ti7t" path="res://microbe.tscn" id="1_6ruj7"]
[ext_resource type="Script" path="res://player.gd" id="2_y8atj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u1ecu"]
resource_local_to_scene = true
radius = 28.0
height = 80.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ja4h"]
bg_color = Color(1, 0.411765, 0.458824, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tb01k"]
bg_color = Color(0, 0.682353, 0.952941, 0.411765)

[node name="Microbe" instance=ExtResource("1_6ruj7")]
script = ExtResource("2_y8atj")

[node name="Sprite" parent="Node2D" index="0"]
animation = &"base_0"

[node name="Bod" parent="." index="1"]
shape = SubResource("CapsuleShape2D_u1ecu")

[node name="Camera" type="Camera2D" parent="." index="6"]
limit_left = 0
limit_top = 0
limit_right = 20000
limit_bottom = 15000
position_smoothing_speed = 200.0

[node name="Canvas" type="CanvasLayer" parent="." index="7"]

[node name="Xp_Bar" type="ProgressBar" parent="Canvas" index="0"]
offset_left = 160.0
offset_top = 30.0
offset_right = 1760.0
offset_bottom = 40.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Level_Display" type="Label" parent="Canvas/Xp_Bar" index="0"]
layout_mode = 0
offset_left = -60.0
offset_top = -25.0
offset_bottom = 35.0
theme_type_variation = &"HeaderLarge"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Health_Bar" type="ProgressBar" parent="Canvas" index="1"]
offset_left = 160.0
offset_top = 60.0
offset_right = 1760.0
offset_bottom = 70.0
theme_override_styles/fill = SubResource("StyleBoxFlat_5ja4h")
step = 0.002
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Boost_Bar" type="ProgressBar" parent="Canvas" index="2"]
visible = false
offset_left = 160.0
offset_top = 1030.0
offset_right = 1760.0
offset_bottom = 1040.0
theme_override_styles/fill = SubResource("StyleBoxFlat_tb01k")
value = 100.0
show_percentage = false

[node name="Xp_points" type="Label" parent="Canvas" index="3"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
offset_left = 710.0
offset_top = 100.0
offset_right = 1210.0
offset_bottom = 150.0
horizontal_alignment = 1
autowrap_mode = 3

[node name="Kill_Count" type="Label" parent="Canvas" index="4"]
offset_left = 160.0
offset_top = 100.0
offset_right = 360.0
offset_bottom = 150.0
